--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="footer-imprint">
         <a routerLink="/imprint">
-            <p>Imprint</p>
+            <p>{{ translationService.translate('FOOTER.IMPRINT') }}</p>
         </a>
     </div>
 </div>
