--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -19,6 +19,7 @@
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
+  scroll-margin-top: $anchor-padding;
 }
 
 // Hauptkomponenten und Layout-Details
