--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,21 +1,25 @@
 <div class="portfolio-section" id="portfolio">
   <div class="portfolio-head">
-    <h1>Portfolio</h1>
+    <h1>{{ translationService.translate('PORTFOLIO.TITLE') }}</h1>
     <div class="portfolio-line"></div>
-    <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>
+    <p>{{ translationService.translate('PORTFOLIO.DESCRIPTION') }}</p>
   </div>
-  @for (project of projects; track project.title) {
+  @for (project of projects; track project.titleKey) {
   <div class="project-container" [ngClass]="{ 'reverse-layout': project.reverseLayout }">
     <div class="project-image">
-      <img [src]="project.imageSrc" [alt]="project.title">
+      <img [src]="project.imageSrc" [alt]="translationService.translate(project.titleKey)">
     </div>
     <div class="project-details">
-      <h2>{{ project.title }}</h2>
+      <h2>{{ translationService.translate(project.titleKey) }}</h2>
       <p class="portfolio-technologies">{{ project.technologies.join(' | ') }}</p>
-      <p>{{ project.description }}</p>
+      <p>{{ translationService.translate(project.descriptionKey) }}</p>
       <div class="project-links">
-        <a [href]="project.liveTestLink" target="_blank" class="btn-live-test">Live test</a>
-        <a [href]="project.githubLink" target="_blank" class="btn-github">Github</a>
+        <a [href]="project.liveTestLink" target="_blank" class="btn-live-test">
+          {{ translationService.translate('BUTTON.LIVE_TEST') }}
+        </a>
+        <a [href]="project.githubLink" target="_blank" class="btn-github">
+          {{ translationService.translate('BUTTON.GITHUB') }}
+        </a>
       </div>
     </div>
   </div>
