--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -78,6 +78,11 @@ a {
   font-size: $font-size-xxl;
   margin-block-start: 0.1em;
   margin-block-end: 0.1em;
+  text-align: end;
+}
+
+.skills-right .skills-text-and-button > h2 {
+  text-align: end;
 }
 
 .skills-left > h1 {
