--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -12,6 +12,8 @@
   justify-content: center;
   align-items: stretch;
   z-index: 50;
+  max-width: 1920px; 
+  margin: 0 auto;
 
   // Footer Line
   .footer-line {
