optimised header for large screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
-.content-wrapper {
-  max-width: 1920px;
-  width: 100%;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
+// .content-wrapper {
+//   max-width: 1920px;
+//   width: 100%;
+//   margin: 0 auto;
+//   box-sizing: border-box;
+// }
