--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,47 +1,49 @@
 <header id="header">
-  <div class="header-left">
-  <!-- Logo -->
-  <a href="#header">
-    <img src="../../assets/Logo_gs_02.png" alt="Website logo: Gloria Schaffarczyk" id="logo" />
-  </a>
+  <div class="header-wrapper">
+    <div class="header-left">
+      <!-- Logo -->
+      <a href="#header">
+        <img src="../../assets/Logo_gs_02.png" alt="Website logo: Gloria Schaffarczyk" id="logo" />
+      </a>
+      </div>
+    <div class="header-center">
+      <!-- Language Selector -->
+      <div class="switch" (click)="toggleLanguage()">
+        <input 
+        id="language-toggle" 
+        class="check-toggle check-toggle-round-flat" 
+        type="checkbox"
+        [checked]="isChecked"
+        (change)="toggleLanguage()">
+        <label for="language-toggle"></label>
+        <span class="on">EN</span>
+        <span class="off">DE</span>
+      </div> 
+    </div>
+    <div class="header-right">
+      <!-- Hamburger Icon for mobile menu -->
+      <div class="icon nav-icon-4" (click)="toggleMenu()" [class.open]="isMenuOpen">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </div>
+    
+      <!-- Desktop Navigation Links -->
+      <nav class="desktop-nav">
+        <a href="#about-me">{{ translationService.translate('HEADER.ABOUT_ME') }}</a>
+        <a href="#skills">{{ translationService.translate('HEADER.SKILLS') }}</a>
+        <a href="#portfolio">{{ translationService.translate('HEADER.PORTFOLIO') }}</a>
+      </nav>
+    
+      <!-- Mobile Navigation Links -->
+      <nav class="mobile-menu" [class.open]="isMenuOpen">
+        <a href="#about-me" (click)="closeMenu()">{{ translationService.translate('HEADER.ABOUT_ME') }}</a>
+        <a href="#skills" (click)="closeMenu()">{{ translationService.translate('HEADER.SKILLS') }}</a>
+        <a href="#portfolio" (click)="closeMenu()">{{ translationService.translate('HEADER.PORTFOLIO') }}</a>
+        <a href="#contact" (click)="closeMenu()">{{ translationService.translate('HEADER.CONTACT') }}</a>
+      </nav>
+    </div>
   </div>
-<div class="header-center">
-  <!-- Language Selector -->
-  <div class="switch" (click)="toggleLanguage()">
-    <input 
-    id="language-toggle" 
-    class="check-toggle check-toggle-round-flat" 
-    type="checkbox"
-    [checked]="isChecked"
-    (change)="toggleLanguage()">
-    <label for="language-toggle"></label>
-    <span class="on">EN</span>
-    <span class="off">DE</span>
-  </div> 
-</div>
-<div class="header-right">
-  <!-- Hamburger Icon for mobile menu -->
-  <div class="icon nav-icon-4" (click)="toggleMenu()" [class.open]="isMenuOpen">
-    <span aria-hidden="true"></span>
-    <span aria-hidden="true"></span>
-    <span aria-hidden="true"></span>
-  </div>
-
-  <!-- Desktop Navigation Links -->
-  <nav class="desktop-nav">
-    <a href="#about-me">{{ translationService.translate('HEADER.ABOUT_ME') }}</a>
-    <a href="#skills">{{ translationService.translate('HEADER.SKILLS') }}</a>
-    <a href="#portfolio">{{ translationService.translate('HEADER.PORTFOLIO') }}</a>
-  </nav>
-
-  <!-- Mobile Navigation Links -->
-  <nav class="mobile-menu" [class.open]="isMenuOpen">
-    <a href="#about-me" (click)="closeMenu()">{{ translationService.translate('HEADER.ABOUT_ME') }}</a>
-    <a href="#skills" (click)="closeMenu()">{{ translationService.translate('HEADER.SKILLS') }}</a>
-    <a href="#portfolio" (click)="closeMenu()">{{ translationService.translate('HEADER.PORTFOLIO') }}</a>
-    <a href="#contact" (click)="closeMenu()">{{ translationService.translate('HEADER.CONTACT') }}</a>
-  </nav>
-</div>
 </header>
 
 <!-- Dummy-Platzhalter -->
