--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,10 +18,12 @@ html {
   flex-direction: column;
   scroll-behavior: smooth;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 .scrollStop {
@@ -33,29 +35,29 @@ body {
 
 /* Globale Anpassung der Scrollbar */
 ::-webkit-scrollbar {
-  width: 8px; /* Breite der Scrollbar */
-  height: 8px; /* Für horizontale Scrollbars */
+  width: 8px; 
+  height: 8px; 
 }
 
 ::-webkit-scrollbar-track {
-  background: $color-dark; /* Hintergrund passend zum Design */
-  border-radius: 10px; /* Abgerundete Kanten */
+  background: $color-dark; 
+  border-radius: 10px; 
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: $primary-color; /* Hauptfarbe für die Scroll-Leiste */
-  border-radius: 10px; /* Runde Scroll-Leiste */
-  border: 2px solid $color-dark; /* Lücke zwischen Track und Thumb */
+  background-color: $primary-color; 
+  border-radius: 10px;
+  border: 2px solid $color-dark;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: $secondary-color; /* Farbe beim Hover */
+  background-color: $secondary-color;
 }
 
 /* Für Firefox */
 * {
-  scrollbar-width: thin; /* Dünne Scroll-Leiste */
-  scrollbar-color: $primary-color $color-dark; /* Thumb und Track */
+  scrollbar-width: thin; 
+  scrollbar-color: $primary-color $color-dark; 
 }
 
 /* Stile für Links */
